changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Apply #2753395 (help file for the wimpy command).
Andreas Kirschbaum 2009-04-11

Fix for bug 2602566 - Players can nest containers.  pick_up() has largely
same functionality, but lots of changes to remove the series of gotos and
generally just clean it up.
server/c_object.c: Clean up function pick_up().  Modify put_object_in_sack()
   to not allow containers to be put in containers.
MSW 2009-04-07

Fix for bug include/autoconf.h.in - customize stack of weapons bug.
This commit also fixes some other things, like update name not getting
sent to the client when doing the prepare.
types/weapon_improver/weapon_improver.c: All changes in prepare_weapon():
    Split stack of weapons so other items don't disappear.  Move the
    draw_info() call after updating the weapon name, so it uses new
    weapon name.  Add call to esrv_update_item() to update the name
    of the weapon.
MSW 2009-04-05

common/friend.c, common/exp.c, common/button.c, common/object.c, common/utils.c:
  Fix some bad format strings for LOG().
Arvid Norlander 2009-03-04

common/map.c: Based on profiling of charm monster on a large map with Chinese
  dragons, optimise get_map_flags() a bit by avoiding a call to out_of_map(),
  get_map_from_coord() performs the needed checks and we need to call it anyway.
  Also fix typos in the documentation for get_map_from_coord().
Arvid Norlander 2009-03-03

server/attack.c: Fix crash bug introduced in r11584 (Fix for bug 1922771: xp non
  zero in meditation). Bug triggered by charming chinese dragons.
Arvid Norlander 2009-03-03
