@@ -14,6 +14,13 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Fix for bug 2281692 - CFDialog conversation NPC answer precedes PC speech.
+server/monster.c: ext_info_map() wasn't called until after the event logic.
+Instead, for players, we can draw it immediately - we only need to perhaps do
+something special for monsters.  In this way, conversation is in the correct
+order.
+MSW 2009-04-14
+
 Apply #2753395 (help file for the wimpy command).
 Andreas Kirschbaum 2009-04-11
 
